charts/infra/nexus/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: route-ingress-nexus
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route-nexus"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300s"
    nginx.ingress.kubernetes.io/send-timeout: "300"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "5m"
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
spec:
  tls:
  - secretName: virtapp.io
  rules:

  - host: containers.virtapp.io
    http:
      paths:
      - backend:
          service:
            name: nexus-proxy
            port:
              number: 8080
        path: /
        pathType: Prefix

  - host: nexus.virtapp.io
    http:
      paths:
      - backend:
          service:
            name: nexus-proxy
            port:
              number: 8080
        path: /
        pathType: Prefix
